--- a/Exel_Project/Exel_Project.csproj
+++ b/Exel_Project/Exel_Project.csproj
@@ -51,6 +51,12 @@
     <Compile Include="BOM.Designer.cs">
       <DependentUpon>BOM.cs</DependentUpon>
     </Compile>
+    <Compile Include="Line.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Line.Designer.cs">
+      <DependentUpon>Line.cs</DependentUpon>
+    </Compile>
     <Compile Include="MessageHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -58,6 +64,9 @@
     <Compile Include="services\BomService.cs" />
     <EmbeddedResource Include="BOM.resx">
       <DependentUpon>BOM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Line.resx">
+      <DependentUpon>Line.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
