--- a/Exel_Project/Exel_Project.csproj
+++ b/Exel_Project/Exel_Project.csproj
@@ -57,6 +57,15 @@
     <Compile Include="Line.Designer.cs">
       <DependentUpon>Line.cs</DependentUpon>
     </Compile>
+    <Compile Include="LineLogic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainFRM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainFRM.Designer.cs">
+      <DependentUpon>MainFRM.cs</DependentUpon>
+    </Compile>
     <Compile Include="MessageHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -67,6 +76,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Line.resx">
       <DependentUpon>Line.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainFRM.resx">
+      <DependentUpon>MainFRM.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
