--- a/Exel_Project/Exel_Project.csproj
+++ b/Exel_Project/Exel_Project.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="services\BomModelService.cs" />
     <Compile Include="services\BomService.cs" />
+    <Compile Include="services\PlanService.cs" />
     <EmbeddedResource Include="BOM.resx">
       <DependentUpon>BOM.cs</DependentUpon>
     </EmbeddedResource>
